--- a/complete/DockerfileBuild
+++ b/complete/DockerfileBuild
@@ -18,10 +18,10 @@ FROM openjdk:17-jdk-slim
 WORKDIR /app
 
 # Skopiowanie zbudowanej jarki z kontenera budującego do kontenera uruchamiającego aplikację
-COPY --from=build /app/target/demoWeb-0.0.1-SNAPSHOT.jar /app/demoWeb.jar
+COPY --from=build /app/target/restService-0.0.1-SNAPSHOT.jar /app/restService.jar
 
 # Wystawienie portu 8080
 EXPOSE 8080
 
 # Uruchomienie aplikacji przy starcie kontenera
-ENTRYPOINT ["java", "-jar", "/app/demoWeb.jar"]
+ENTRYPOINT ["java", "-jar", "/app/restService.jar"]
