--- a/complete/Dockerfile
+++ b/complete/Dockerfile
@@ -5,10 +5,10 @@ FROM openjdk:17-jdk-slim
 WORKDIR /app
 
 # Skopiowanie jarki z hosta do kontenera
-COPY target/demoWeb-0.0.1-SNAPSHOT.jar /app/demoWeb.jar
+COPY target/restService-0.0.1-SNAPSHOT.jar /app/restService.jar
 
 # Wystawienie portu 8080
 EXPOSE 8080
 
 # Uruchomienie aplikacji spring-bootowej przy starcie kontenera
-ENTRYPOINT ["java", "-jar", "/app/demoWeb.jar"]
+ENTRYPOINT ["java", "-jar", "/app/restService.jar"]
