--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,4 +10,4 @@ jobs:
         with:
           compose-file: "./docker-compose.yml"
       - name: Build the stack
-        run: docker-compose up -d
+        run: docker compose up -d
